--- a/Views/Home/Tutorials.cshtml
+++ b/Views/Home/Tutorials.cshtml
@@ -1,14 +1,17 @@
 ﻿@{
     ViewBag.Title = "Tutorials FL Studio 11";
 }
-<h2>@ViewBag.Title.</h2>
+<h1>@ViewBag.Title.</h1>
 
-<address>
-    One Microsoft Way<br />
-    Lorem Ipsum<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<table>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+    Aliquam vel lorem vel neque tincidunt tempus in sit amet nulla. 
+    Morbi vitae vehicula leo. Integer porttitor euismod viverra. Aenean id erat dolor. 
+    Donec lobortis nisi eu ante volutpat bibendum. 
+    Maecenas ut nunc tempor, lobortis dui sit amet, eleifend urna. 
+    Sed sollicitudin, dui consectetur convallis aliquam,
+     magna nibh accumsan ipsum, sed pretium ex erat et velit.
+</table>
 
 <address>
     <strong>YT:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
