--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="jumbotron">
     <h1>Speed Pluger</h1>
     <p class="lead">SpeedPluger gives you a powerful tools to make your own music using a VST plugins</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg" translate="yes">Let's Start&raquo;&raquo;</a></p>
+    <p><a href="~/Account/Register" class="btn btn-warning btn-lg" translate="yes">Let's Start&raquo;&raquo;</a></p>
 </div>
 
 <div class="row">
