--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SpeedPluger.Models.RegisterViewModel
 
-<h2>@ViewBag.Title.SpeedPluger</h2>
+<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
